# emojirades

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  alembic.ini  emojirades.service  emojiradesplusplus.config  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
emojirades/: __init__.py  bot.py  checks.py  gamestate.py  handlers.py  helpers.py  scorekeeper.py  slack.py  wrappers.py
emojirades/analytics/: leaderboard.py  scoreboard.py  time_range.py  time_unit.py
emojirades/commands/: __init__.py  registry.py
emojirades/commands/gamestate_commands/: correct_guess_command.py  fixwinner_command.py  game_status.py  inferred_correct_guess_command.py  newgame_command.py  remove_admin_command.py  set_admin_command.py  set_emojirade_command.py
emojirades/commands/general_commands/: help_command.py
emojirades/commands/scorekeeper_commands/: history_command.py  leaderboard_command.py  minusminus_command.py  scoreboard_command.py  set_command.py
emojirades/handlers/: __init__.py  base.py  configuration.py  workspace.py
emojirades/persistence/: __init__.py  orm.py
emojirades/persistence/handlers/: __init__.py  auth.py  gamestate.py  scorekeeper.py  workspace.py
emojirades/persistence/models/: __init__.py  alembic.ini  base.py  gamestate.py  scorekeeper.py
emojirades/persistence/models/alembic/: env.py
emojirades/persistence/models/alembic/versions/: 1fe85f36a1a5_add_timezone_awareness_to_datetime_.py  2a7a559e761b_initial_models.py  5b255e1355ba_initial_models.py  8423d701dfb0_initial_models.py  a81ec51075d0_initial_models.py
emojirades/printers/: leaderboard_printer.py  scoreboard.py
emojirades/slack/: client.py  event.py  slack_client.py
emojirades/tests/: FileFixture.py  helper.py  test_commands.py  test_gamestate.py  test_scenarios.py  test_scorekeeper.py
emojirades/tests/analytics/: leaderboard.py  test_leaderboard.py  test_time_range.py
emojirades/tests/fixtures/: bot_event.json  gamestate.json  gamestate_history.json  history.json  invalid_event.json  scoreboard.json  scoreboard_history.json  user_event.json
emojirades/tests/slack/: test_event.py
features/steps/: bot_setup.py  test_dummy_chat.py
migrations/versions/: 2a7a559e761b_initial_models.py
plusplusbot/: bot.py  checks.py  commands.py  game.py  gamestate.py  handlers.py  helpers.py  main.py  scorekeeper.py  slack.py  test_scorekeeper.py  wrappers.py
plusplusbot/analytics/: leaderboard.py
plusplusbot/command/: command_registry.py  commands.py  help_command.py
plusplusbot/command/gamestate_commands/: correct_guess_command.py  fixwinner_command.py  game_status.py  gamestate_command.py  inferred_correct_guess_command.py  newgame_command.py  remove_admin_command.py  set_admin_command.py  set_emojirade_command.py
plusplusbot/command/general_commands/: help_command.py
plusplusbot/command/scorekeeper_commands/: history_command.py  inferred_plusplus_command.py  leaderboard_command.py  minusminus_command.py  plusplus_command.py  scorekeeper_command.py  set_command.py
plusplusbot/commands/: __init__.py  registry.py
plusplusbot/commands/gamestate_commands/: __init__.py  correct_guess_command.py  fixwinner_command.py  game_status.py  inferred_correct_guess_command.py  newgame_command.py  remove_admin_command.py  set_admin_command.py  set_emojirade_command.py
plusplusbot/commands/general_commands/: __init__.py  help_command.py
plusplusbot/commands/scorekeeper_commands/: __init__.py  history_command.py  leaderboard_command.py  minusminus_command.py  set_command.py
plusplusbot/dummies/: bot.py
plusplusbot/tests/: helper.py  test_bot.py  test_commands.py  test_scenarios.py  test_scorekeeper.py
plusplusbot/tests/analytics/: leaderboard.py
plusplusbot/tests/features/: dummy_chat.feature
plusplusbot/tests/fixtures/: history.json
plusplusbot/tests/step_defs/: bot_setup.py  dummy_chat.py  test_dummy_chat.py
scripts/: run_tests.sh
src/emojirades/: __init__.py  bot.py  cli.py  gamestate.py  helpers.py  scorekeeper.py  wrappers.py
src/emojirades/analytics/: scoreboard.py  time_range.py
src/emojirades/commands/: __init__.py  registry.py
src/emojirades/commands/gamestate_commands/: correct_guess_command.py  fixwinner_command.py  game_status.py  inferred_correct_guess_command.py  newgame_command.py  set_emojirade_command.py
src/emojirades/commands/general_commands/: help_command.py
src/emojirades/commands/scorekeeper_commands/: history_command.py  scoreboard_command.py
src/emojirades/persistence/: __init__.py  alembic.ini  orm.py
src/emojirades/persistence/handlers/: __init__.py  auth.py  gamestate.py  scorekeeper.py  workspace.py
src/emojirades/persistence/migrations/: env.py
src/emojirades/persistence/migrations/versions/: 1fe85f36a1a5_add_timezone_awareness_to_datetime_.py
src/emojirades/persistence/models/: __init__.py  alembic.ini  base.py  gamestate.py  scorekeeper.py
src/emojirades/persistence/models/alembic/: env.py
src/emojirades/persistence/models/alembic/versions/: 1fe85f36a1a5_add_timezone_awareness_to_datetime_.py  2a7a559e761b_initial_models.py
src/emojirades/persistence/repositories/: __init__.py  auth.py  gamestate.py  scorekeeper.py  workspace.py
src/emojirades/printers/: scoreboard.py
src/emojirades/slack/: event.py  slack_client.py
tests/: conftest.py  slack.py  slack_ws.py  test_commands.py  test_event.py  test_gamestate.py  test_leaderboard.py  test_scenarios.py  test_scorekeeper.py  test_time_range.py
tests/fixtures/: history.json
tools/: history_to_csv.py  old_to_new_persistence.py  sqlite_to_postgres.py
