[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emojirades"
dynamic = ["version"]
description = "Slack bot that understands the Emojirades game!"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "The Emojirades Team", email = "support@emojirades.io"}
]
keywords = ["slack", "slackbot", "emojirades", "plusplus", "game"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.12"
dependencies = [
    "slack_sdk~=3.41.0",
    "requests>=2.32.3,<2.34.0",
    "boto3~=1.42.30",
    "Unidecode~=1.4.0",
    "expiringdict~=1.2.2",
    "SQLAlchemy~=2.0.9",
    "alembic~=1.18.1",
    "psycopg2-binary~=2.9.5",
    "python-json-logger~=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit~=4.6.0",
    "pytest~=9.0.2",
    "ruff~=0.15.2",
    "websockets~=16.0",
]

[project.urls]
Homepage = "https://github.com/emojirades/emojirades"

[project.scripts]
emojirades = "emojirades.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "emojirades.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.ini"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "src/emojirades/persistence/models/alembic",
]

[tool.ruff.lint]
# Enable a base set of rules (Pyflakes, pycodestyle, etc.)
select = ["E", "F", "W", "I"]
# Mimic the .pylintrc disables
ignore = [
    "D100", # missing-module-docstring
    "D101", # missing-class-docstring
    "D102", # missing-function-docstring
    "D103", # missing-function-docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
