[metadata]
name = emojirades
version = attr: emojirades.VERSION
url = https://github.com/emojirades/emojirades
author = The Emojirades Team
author_email = support@emojirades.io
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment
license = AGPLv3
description = Slack bot that understands the Emojirades game!
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = slack slackbot emojirades plusplus game

[options]
install_requires =
    slack_sdk~=3.19.1
    requests~=2.28.1
    boto3~=1.26.7
    Unidecode~=1.3.4
    pendulum~=2.1.2
    expiringdict~=1.2.2
    SQLAlchemy~=1.4.39
    alembic~=1.8.1
    psycopg2-binary~=2.9.3
    python-json-logger~=2.0.4

python_requires = >=3.8

scripts = 
    bin/emojirades

packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest~=7.2.0
    pylint~=2.15.3
    black~=22.10.0
    websockets~=10.3

[options.package_data]
* = *.ini
