[metadata]
name = emojirades
version = attr: emojirades.VERSION
url = https://github.com/emojirades/emojirades
author = The Emojirades Team
author_email = support@emojirades.io
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment
license = AGPLv3
description = Slack bot that understands the Emojirades game!
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = slack slackbot emojirades plusplus game

[options]
install_requires =
    slack_sdk~=3.23.0
    requests~=2.31.0
    boto3~=1.28.44
    Unidecode~=1.3.6
    pendulum~=3.0.0
    expiringdict~=1.2.2
    SQLAlchemy~=2.0.9
    alembic~=1.12.0
    psycopg2-binary~=2.9.5
    python-json-logger~=2.0.4

python_requires = >=3.10

scripts = 
    bin/emojirades

packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest~=7.4.2
    pylint~=3.0.2
    black~=24.2.0
    websockets~=12.0

[options.package_data]
* = *.ini
